--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
 <style>
 body {
-    background: fushia;
+    background: #BD73E7;
     font-family: Verdana;
 }  
 #content {
-    background: darkpurple;
+    background: white;
     min-width: 200px;
     max-width: 500px;
     padding: 50px;
