--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@ body {
 }
 h1 {
     letter-spacing: 2px;
-    font-size: 16px;
+    font-size: 26px;
     text-align: center;
 }
 h2 {
     font-size: 14px;
     text-align: center;
+    background-color: #fff;
+    padding: 10px: 
+        border-radius: 25px: 
+        color: #BD73E7:
 }
 h3 {
     font-size: 12px;
