--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ body {
     font-family: Verdana;
 }  
 #content {
-    background: white;
+    background: transparent;
     min-width: 200px;
     max-width: 500px;
     padding: 50px;
