--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ h2 {
     font-size: 14px;
     text-align: center;
     background-color: #fff;
-    padding: 10px: 
+    padding: 10px;
         border-radius: 25px: 
         color: #BD73E7:
 }
