--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ h2 {
     text-align: center;
     background-color: #fff;
     padding: 10px;
-        border-radius: 25px: 
-        color: #BD73E7:
+        border-radius: 25px; 
+        color: #BD73E7;
 }
 h3 {
     font-size: 12px;
